[gd_scene load_steps=2 format=3 uid="uid://bdhba2ei5qdj2"]

[ext_resource type="Script" path="res://multiplayer_mode.gd" id="1_f66gb"]

[node name="MultiplayerMode" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -22.0
offset_bottom = 268.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f66gb")

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 640.0
offset_top = 192.0
offset_right = 832.0
offset_bottom = 256.0
text = "Masa Aç"

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 384.0
offset_top = 192.0
offset_right = 576.0
offset_bottom = 256.0
text = "Masaya Katıl"

[node name="Start" type="Button" parent="."]
layout_mode = 0
offset_left = 640.0
offset_top = 448.0
offset_right = 832.0
offset_bottom = 512.0
disabled = true
text = "Oyunu Başlat"

[node name="Seat" type="Button" parent="."]
layout_mode = 0
offset_left = 640.0
offset_top = 320.0
offset_right = 832.0
offset_bottom = 384.0
toggle_mode = true
text = "Oyuna Otur"

[node name="IPAdress" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 192.0
offset_right = 320.0
offset_bottom = 256.0
placeholder_text = "IP adresi"

[node name="PlayerName" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 64.0
offset_top = 64.0
offset_right = 320.0
offset_bottom = 128.0
placeholder_text = "Rumuz :D"

[node name="LabelPlayers" type="Label" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 320.0
offset_right = 256.0
offset_bottom = 352.0
text = "Oyuncular"
vertical_alignment = 1

[node name="LabelNonPlayers" type="Label" parent="."]
layout_mode = 0
offset_left = 320.0
offset_top = 320.0
offset_right = 512.0
offset_bottom = 352.0
text = "Yancılar"
vertical_alignment = 1

[node name="Players" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 368.0
offset_right = 256.0
offset_bottom = 512.0

[node name="NonPlayers" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 320.0
offset_top = 368.0
offset_right = 512.0
offset_bottom = 624.0

[connection signal="button_down" from="Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="Join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="Start" to="." method="_on_start_button_down"]
[connection signal="toggled" from="Seat" to="." method="_on_seat_toggled"]
[connection signal="text_changed" from="PlayerName" to="." method="_on_player_name_text_changed"]
